fix box shadow on mobile dev

--- a/src/shared/components/InputField/InputField.module.scss
+++ b/src/shared/components/InputField/InputField.module.scss
@@ -43,6 +43,7 @@
     border: 1px solid $border-gray;
     background-color: transparent;
     appearance: none;
+    box-shadow: none;
 
     &.error {
       border: 1px solid $helper-text-error;
